-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This test fails to find all of the matching documents when run through CQF, instead returning:
[js_test:elemmatch_object] [{
[js_test:elemmatch_object] "a" : [
[js_test:elemmatch_object] {
[js_test:elemmatch_object]
[js_test:elemmatch_object] }
[js_test:elemmatch_object] ]
[js_test:elemmatch_object] },
[js_test:elemmatch_object] {
[js_test:elemmatch_object] "a" : [
[js_test:elemmatch_object] 1,
[js_test:elemmatch_object] {
[js_test:elemmatch_object]
[js_test:elemmatch_object] }
[js_test:elemmatch_object] ]
[js_test:elemmatch_object] },
[js_test:elemmatch_object] {
[js_test:elemmatch_object] "a" : [
[js_test:elemmatch_object] {
[js_test:elemmatch_object] "b" : 1
[js_test:elemmatch_object] }
[js_test:elemmatch_object] ]
[js_test:elemmatch_object] }
[js_test:elemmatch_object] ] :