SERVER-67503 Return documents with arrays satisfying $elemMatch predicates